Added first migration and empty database. Also, removed unnecessary 'api' from URL route on all controllers

--- a/API/RecipEaseAPI/appsettings.json
+++ b/API/RecipEaseAPI/appsettings.json
@@ -10,5 +10,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-14I61L6\\SQLEXPRESS;Database=RecipEaseDB;Trusted_Connection=True;"
+  }
 }
