Got API and database deployed! Many thanks to Seth; may he live long and prosper!

--- a/API/RecipEaseAPI/appsettings.json
+++ b/API/RecipEaseAPI/appsettings.json
@@ -12,7 +12,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-14I61L6\\SQLEXPRESS;Database=RecipEaseDB;Trusted_Connection=True;"
-    //"DefaultConnection": "Server=tcp:recipease.database.windows.net,1433;Initial Catalog=RecipEaseDB;Persist Security Info=False;User ID=ServerAdmin;Password=Iceazure117!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=recipease.database.windows.net;Database=RecipEaseDB;Trusted_Connection=True;"
   }
 }
