Fixed connection strings to deploy

--- a/API/RecipEaseAPI/appsettings.json
+++ b/API/RecipEaseAPI/appsettings.json
@@ -12,8 +12,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=recipease.database.windows.net;Database=RecipEaseDB;Trusted_Connection=True;"
-    "DefaultConnection": "Server=DESKTOP-14I61L6\\SQLEXPRESS;Database=RecipEaseDB;Trusted_Connection=True;"
+    "DefaultConnection": "Server=recipease.database.windows.net;Database=RecipEaseDB;Trusted_Connection=True;"
+    //"DefaultConnection": "Server=DESKTOP-14I61L6\\SQLEXPRESS;Database=RecipEaseDB;Trusted_Connection=True;"
 
   }
 }
